// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario: install an app install its dep 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 98,
  "freeSpaceBytes": 200704,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 22,
  "totalAppsBytes": 45056,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install an app install its dep 2`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "litecoin",
      "name": "Litecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 96,
  "freeSpaceBytes": 196608,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 24,
  "totalAppsBytes": 49152,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install an app install its dep 3`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 98,
  "freeSpaceBytes": 200704,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 22,
  "totalAppsBytes": 45056,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install an app install its dep 4`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "litecoin",
      "name": "Litecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 96,
  "freeSpaceBytes": 196608,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 24,
  "totalAppsBytes": 49152,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install an app with outdated dep 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "litecoin",
      "name": "Litecoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 96,
  "freeSpaceBytes": 196608,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 24,
  "totalAppsBytes": 49152,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install an outdated app 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 100,
  "freeSpaceBytes": 204800,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 20,
  "totalAppsBytes": 40960,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install an outdated app dep 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 98,
  "freeSpaceBytes": 200704,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 22,
  "totalAppsBytes": 45056,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install and uninstall an app 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "ripple",
      "name": "XRP",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 100,
  "freeSpaceBytes": 204800,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 20,
  "totalAppsBytes": 40960,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install and uninstall an app 2`] = `
Object {
  "apps": Array [],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 120,
  "freeSpaceBytes": 245760,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 0,
  "totalAppsBytes": 0,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install and uninstall will undo (if top level dep) 1`] = `
Object {
  "apps": Array [],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 120,
  "freeSpaceBytes": 245760,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 0,
  "totalAppsBytes": 0,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: install existing is noop 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 1,
      "bytes": 2048,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 119,
  "freeSpaceBytes": 243712,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 1,
  "totalAppsBytes": 2048,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: order is preserved in install action plan 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "ripple",
      "name": "XRP",
    },
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "ethereum",
      "name": "Ethereum",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "ethereum_classic",
      "name": "Ethereum Classic",
    },
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "dogecoin",
      "name": "Dogecoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "zcash",
      "name": "Zcash",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 54,
  "freeSpaceBytes": 110592,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 66,
  "totalAppsBytes": 135168,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: order is preserved in uninstall action plan 1`] = `
Object {
  "apps": Array [],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 120,
  "freeSpaceBytes": 245760,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 0,
  "totalAppsBytes": 0,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: uninstall an app that have deps 1`] = `
Object {
  "apps": Array [],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 120,
  "freeSpaceBytes": 245760,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 0,
  "totalAppsBytes": 0,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: uninstall non-existing is noop 1`] = `
Object {
  "apps": Array [],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 120,
  "freeSpaceBytes": 245760,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 0,
  "totalAppsBytes": 0,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: update all still works with unknown apps 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 1,
      "bytes": 2048,
      "currencyId": "ethereum",
      "name": "Ethereum",
    },
    Object {
      "blocks": 1,
      "bytes": 2048,
      "currencyId": undefined,
      "name": "Unknown",
    },
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "litecoin",
      "name": "Litecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 96,
  "freeSpaceBytes": 196608,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 24,
  "totalAppsBytes": 49152,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: update all will reinstall the outdated 1`] = `
Object {
  "apps": Array [
    Object {
      "blocks": 1,
      "bytes": 2048,
      "currencyId": "ethereum",
      "name": "Ethereum",
    },
    Object {
      "blocks": 20,
      "bytes": 40960,
      "currencyId": "bitcoin",
      "name": "Bitcoin",
    },
    Object {
      "blocks": 2,
      "bytes": 4096,
      "currencyId": "litecoin",
      "name": "Litecoin",
    },
  ],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 97,
  "freeSpaceBytes": 198656,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 23,
  "totalAppsBytes": 47104,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;

exports[`Scenario: wipe installed apps 1`] = `
Object {
  "apps": Array [],
  "appsSpaceBlocks": 120,
  "appsSpaceBytes": 245760,
  "freeSpaceBlocks": 120,
  "freeSpaceBytes": 245760,
  "osBlocks": 40,
  "osBytes": 81920,
  "shouldWarnMemory": false,
  "totalAppsBlocks": 0,
  "totalAppsBytes": 0,
  "totalBlocks": 160,
  "totalBytes": 327680,
}
`;
